# Credit-Card-analysis-and-Scoring-System

./: Dockerfile  README.md  api.py  app.py  credit_scoring.py  data_processing.py  fraud_detection.py  pyproject.toml  recommendation_system.py  requirements.txt  style.css  visualization.py
.streamlit/: config.toml
attached_assets/: Credit Card report.pbix  Pasted-File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-streamlit-runtime-scriptrunner-1743870168691.txt  Pasted-Secured-Builder-Card-53-Match-div-style-display-flex-flex-wrap-wrap-gap-15px-margin-botto-1743882005453.txt
models/: credit_card_recommender_scaler.joblib  fraud_detection_model.joblib
